skapat index + admin samt löst js för get product

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<h1>OUR AVAILABLE PRODUCTS</h1>
+    <div id="container">
+        
+    </div>
+
     <script src="js/products.js"></script>
 </body>
 </html>
