Fixat delete funktion, tables med titlar & styling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<a href="admin.html">Admin</a>
 <h1>OUR AVAILABLE PRODUCTS</h1>
     <div id="container">
         
