fixat update och creatfunktioner

--- a/update.html
+++ b/update.html
@@ -6,7 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Update</title>
 </head>
+
 <body>
-    
+    <div id="container">
+        <h1>Update product</h1>
+        <form id="update-product-form">
+            <label for="">Title</label>
+            <input type="text" name="title" id="title-textarea" cols="10" rows="1"></input>
+            <label for="">Description</label>
+            <input type="text" name="description" id="description-textarea" cols="10" rows="1"></input>
+            <label for="">Price</label>
+            <input type="text" name="price" id="price-textarea" cols="10" rows="1"></input>
+            <label for="">Stock</label>
+            <input type="text" name="stock" id="stock-textarea" cols="10" rows="1"></input>
+            <label for="">Category</label>
+            <input type="text" name="category" id="category-textarea" cols="10" rows="1"></input>
+            <input type="submit" value="Update">
+            <a href="admin.html">&#x2190; back</a>
+        </form>
+    </div>
+    <script src="js/updateproduct.js"></script>
 </body>
+
 </html>
